- Fixing logo spacing issue in masthead

--- a/styles/partials/_masthead.scss
+++ b/styles/partials/_masthead.scss
@@ -6,6 +6,13 @@
       position: relative;
   }
 
+  .container-fluid {
+    padding: 0;
+
+    @media (min-width: $small-devices) {
+      padding: 0 15px;
+    }
+  }
   img {
     margin-right: 2em;
 
